Fix overflowing text on asap booking mobile view

--- a/assets/sass/calendar.scss
+++ b/assets/sass/calendar.scss
@@ -274,7 +274,7 @@
 .calendar-asap-booking-button {
   margin-right: 1rem;
   margin-bottom: 1rem;
-  width: 22%;
+  min-width: 22%;
 }
 
 .calendar-booking-container {
